Fixed small issue with horizontal scroll bar visible on the Login page on webkit browsers.

--- a/src/La/LearnodexBundle/Resources/public/css/login.css
+++ b/src/La/LearnodexBundle/Resources/public/css/login.css
@@ -4,6 +4,7 @@
 
 body {
     background-color: transparent;
+    overflow-x: hidden;
 }
 
 .ln-cookie-notice {
